VSCode: add: workspace (boost 1.77.0)

--- a/GetFromSite/GetFromSite.vcxproj
+++ b/GetFromSite/GetFromSite.vcxproj
@@ -167,7 +167,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\LIB.Utils\!Refresh.bat" />
-    <None Include="GetFromSite.conf" />
+    <None Include="getfromsite.conf" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Readme.txt" />
